# dotfiles_sync

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  dist-workspace.toml  example.dotfiles.conf  example.dotfiles.config
config_db/applications/: git.conf  nvim.conf  ssh.conf  tmux.conf
config_db/configuration_files/: zsh.conf
default_db/applications/: 1password-4.conf  2do.conf  ack.conf  act.conf  activitywatch.conf  adium.conf  adobe-camera-raw.conf  aerc.conf  aerospace.conf  affinity-designer.conf  affinity-photo.conf  affinity-publisher.conf  airflow.conf  airmail.conf  akamai-cli.conf  alacritty.conf  aldente.conf  alt-tab.conf  amethyst.conf  ancient-domains-of-mystery.conf  androidstudio-13.conf  ansible.conf  appcleaner.conf  appcode-2.conf  appcode-3.conf  appcode-31.conf  appcode-32.conf  apple-music.conf  apptivate.conf  arara.conf  aria2c.conf  arm.conf  asciinema.conf  asdf.conf  aspell.conf  astyle.conf  atlantis.conf  atom.conf  audacious.conf  auskey.conf  (+557 more)
default_db/default_configs/: 2do.conf  activitywatch.conf  adium.conf  adobe-camera-raw.conf  aerc.conf  aerospace.conf  affinity-designer.conf  affinity-photo.conf  affinity-publisher.conf  airflow.conf  airmail.conf  alacritty.conf  aldente.conf  alt-tab.conf  ancient-domains-of-mystery.conf  androidstudio-13.conf  appcleaner.conf  appcode-2.conf  appcode-3.conf  appcode-31.conf  appcode-32.conf  apple-music.conf  apptivate.conf  arara.conf  aria2c.conf  arm.conf  asdf.conf  aspell.conf  atlantis.conf  audacious.conf  auskey.conf  awareness.conf  b-ryan_powerline-shell.conf  bartender.conf  base.conf  bash-it.conf  bat.conf  bc.conf  beatport-pro.conf  beets.conf  (+458 more)
docs/: MACKUP_SYNC.md
scripts/: README.md  generate_config_db.py  generate_default_db.py
specs/: rust_discussion.md  specs.md
src/: cli.rs  config.rs  db.rs  default_db.json  encryption.rs  git.rs  mackup.rs  main.rs  sync.rs  utils.rs
src/commands/: add.rs  cd.rs  config.rs  create.rs  init.rs  list.rs  mod.rs  pull.rs  push.rs  remove.rs  scan.rs  status.rs  sync.rs  sync_continue.rs  sync_local.rs
