[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A clean, hassle-free dotfiles manager with git integration"
license = "MIT"
repository = "https://github.com/yourusername/dotfiles"

[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
colored = "2.1"
dirs = "5.0"
regex = "1.10"
rpassword = "7.3"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
rand = "0.8"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
