[package]
name = "dotfiles_sync"
version = "1.1.1"
edition = "2021"
authors = ["Gundeep Singh <gndp@live.com>"]
description = "A clean, hassle-free dotfiles manager with git integration"
license = "MIT"
repository = "https://github.com/gndps/dotfiles_sync"
homepage = "https://github.com/gndps/dotfiles_sync"

[package.metadata.release]
publish = false
push = true

[[bin]]
name = "dotfiles"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
colored = "2.1"
dirs = "5.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
strip = true
lto = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
